fixed the extra space at the top on viewJobSeekers page

--- a/src/app/jobListingManagement/viewAllMyJobListings/viewJobSeeker/styles.css
+++ b/src/app/jobListingManagement/viewAllMyJobListings/viewJobSeeker/styles.css
@@ -4,12 +4,13 @@ body {
     background-color: #f7f8fc;
     color: #333;
     margin: 0;
+    /* margin: 40px auto; */
     padding: 0;
   }
   
   .container {
     max-width: 1200px;
-    margin: 40px auto;
+    /* margin: 40px auto; */
     padding: 0 20px;
   }
   
